--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -14,3 +14,20 @@
 </ul>
 
 <%= link_to 'Back to all cars', cars_path %>
+
+<!-- Form for Reviews -->
+<h3>Please Leave your Review:</h3>
+<%= simple_form_for([@car, @review]) do |f| %>
+<div class="form-group">
+  <%= f.input :rating, collection: 0..5, label: false %>
+  <%= f.input :comment, label: false, placeholder: "Comment here" %>
+</div>
+  <%= f.submit 'Add review', class: 'btn btn-primary' %>
+<% end %>
+
+<% @car.reviews.each do |review| %>
+  <p><%= review.comment %></p>
+  <p><%= '⭐️' * review.rating %>
+<% end %>
+
+<%= link_to 'Back to all cars', cars_path %>
