--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -27,7 +27,15 @@
 
 <% @car.reviews.each do |review| %>
   <p><%= review.comment %></p>
-  <p><%= '⭐️' * review.rating %>
+  <p><%= '⭐️' * review.rating %></p>
 <% end %>
 
-<%= link_to 'Back to all cars', cars_path %>
+<!-- Form to add car to Favourites -->
+<h3>Favourite this Car:</h3>
+<%# <% if @car.favourite.empty? %> %>
+  <%= simple_form_for [@car, @favourite] do |f| %>
+    <%= f.submit "Save to my Garage" %>
+  <% end %>
+<%# <% else %>
+  <p>This car is already in your garage!</p>
+<%# <% end %> %> %>
